fixed layout issue in about page

--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -3,10 +3,11 @@
 
     .about_header_section{
         @include grid-center;
-        grid-template-columns: 50% 50%;
+        grid-template-columns: repeat(2, 1fr);
         position: relative;
         top: 90px;
         height: calc(100vh - 90px);
+        min-height: 700px;
 
         .text_wrapper{
             display: grid;
